--- a/Tattoo Studio/index.html
+++ b/Tattoo Studio/index.html
@@ -27,7 +27,7 @@
                          <ul id="menu-top" class="nav navbar-nav navbar-right">
                              <li><a href="index.html" class="menu-top-active" >HOME</a></li>
 
-                             <li><a href="">TRIBALES</a></li>
+                             <li><a href="./tribales.html">TRIBALES</a></li>
                               <li><a href="" >PUNTILLISMO</a></li>
                               <li><a href="">OLD SCHOOL</a></li>
                              <li><a href="">NEW SCHOOL</a></li>
