--- a/Tattoo Studio/puntillismo.html
+++ b/Tattoo Studio/puntillismo.html
@@ -21,7 +21,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="./img/logoSmall.jpg" style="width:100%">
+  <img src="assets/img/logoSmall.jpg" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Inicio</p>
@@ -50,7 +50,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <img src="./img/logo.jpg">
+    <img src="assets/img/logo.jpg">
   </header>
 
   <!-- About Section -->
@@ -75,15 +75,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="./img/pic1.jpg" style="width:100%">
-        <img src="./img/pic2.jpg" style="width:100%">
-        <img src="./img/pic3.jpg" style="width:100%">
+        <img src="assets/img/pic1.jpg" style="width:100%">
+        <img src="assets/img/pic2.jpg" style="width:100%">
+        <img src="assets/img/pic3.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="./img/pic4.jpg" style="width:100%">
-        <img src="./img/pic5.jpg" style="width:100%">
-        <img src="./img/pic6.jpg" style="width:100%">
+        <img src="assets/img/pic4.jpg" style="width:100%">
+        <img src="assets/img/pic5.jpg" style="width:100%">
+        <img src="assets/img/pic6.jpg" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
