--- a/Tattoo Studio/index.html
+++ b/Tattoo Studio/index.html
@@ -13,7 +13,7 @@
 
 
 </head>
-
+<!-- LOGO HEADER-->
 <body>
   <marquee><h1 style="color:red;">Tattoo Studio</h1></marquee>
 
@@ -23,20 +23,17 @@
          <div class="container">
              <div class="row ">
                  <div class="col-md-12">
-                     <div class="navbar-collapse collapse ">
                          <ul id="menu-top" class="nav navbar-nav navbar-right">
                              <li><a href="index.html" class="menu-top-active" >HOME</a></li>
-
-                             <li><a href="./tribales.html">TRIBALES</a></li>
-                              <li><a href="" >PUNTILLISMO</a></li>
-                              <li><a href="">OLD SCHOOL</a></li>
-                             <li><a href="">NEW SCHOOL</a></li>
+                             <li><a href="tribales.html">TRIBALES</a></li>
+                              <li><a href="puntillismo.html" >PUNTILLISMO</a></li>
+                              <li><a href="OldSchool.html">OLD SCHOOL</a></li>
+                             <li><a href="newschool.html">NEW SCHOOL</a></li>
                              <li><a href=""></a></li>
                          </ul>
                      </div>
                  </div>
 
-             </div>
          </div>
      </section>
 
@@ -44,18 +41,18 @@
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="assets/img/newschool.jpg" style="width:100%">
+  <div class="numbertext"></div>
+  <img src="assets/img/newschool-01.jpg" style="width:100%">
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="assets/img/oldschool.jpg" style="width:100%">
+  <div class="numbertext"></div>
+  <img src="assets/img/oldschool-01.jpg" style="width:100%">
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="assets/img/other.jpg" style="width:100%">
+  <div class="numbertext"></div>
+  <img src="assets/img/other-01.jpg" style="width:100%">
 </div>
 
 </div>
@@ -68,7 +65,6 @@
 </div>
 
 <script src="assets/js/slider.js"> </script>
-
 
 </body>
 
