--- a/Tattoo Studio/tribales.html
+++ b/Tattoo Studio/tribales.html
@@ -19,7 +19,7 @@ img {margin-bottom: -7px}
 
 <p><a href= ./index.html target=_top><button class="w3-button w3-black">Home</button></a></p>
 
-<!-- Sidebar 
+<!-- Sidebar
 <nav class="w3-sidebar w3-black w3-animate-top w3-xxlarge" style="display:none;padding-top:150px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-black w3-jumbo w3-display-topright" style="padding:6px 24px">
     <i class="fa fa-remove"></i>
@@ -49,18 +49,18 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="./img/pic_tribales.jpg" style="width:100%">
-    <img src="./img/pic_tribales1.jpg" style="width:100%">
+    <img src="assets/img/pic_tribales.jpg" style="width:100%">
+    <img src="assets/img/pic_tribales1.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="./img/pic_tribales2.jpg" style="width:100%">
-    <img src="./img/pic_tribales3.jpg" style="width:100%">
+    <img src="assets/img/pic_tribales2.jpg" style="width:100%">
+    <img src="assets/img/pic_tribales3.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="./img/pic_tribales4.jpg" style="width:100%">
-    <img src="./img/pic_tribales5.jpg" style="width:100%">
+    <img src="assets/img/pic_tribales4.jpg" style="width:100%">
+    <img src="assets/img/pic_tribales5.jpg" style="width:100%">
   </div>
 </div>
 
@@ -68,7 +68,7 @@ img {margin-bottom: -7px}
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px"> 
+<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px">
   <i class="fa fa-facebook-official w3-hover-text-indigo"></i>
    <i class="fa fa-instagram w3-hover-text-purple"></i>
   <i class="fa fa-snapchat w3-hover-text-yellow"></i>
@@ -77,24 +77,22 @@ img {margin-bottom: -7px}
   <i class="fa fa-linkedin w3-hover-text-indigo"></i>
   <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
- 
+
 <script>
 // Toggle grid padding
 function myFunction() {
     var x = document.getElementById("myGrid");
     if (x.className === "w3-row") {
         x.className = "w3-row-padding";
-    } else { 
+    } else {
         x.className = x.className.replace("w3-row-padding", "w3-row");
     }
 }
-
 // Open and close sidebar
 function w3_open() {
     document.getElementById("mySidebar").style.width = "100%";
     document.getElementById("mySidebar").style.display = "block";
 }
-
 function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
 }
