--- a/Tattoo Studio/puntillismo.html
+++ b/Tattoo Studio/puntillismo.html
@@ -33,6 +33,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>Ejemplos</p>
+
+
+
   </a>
 </nav>
 
@@ -90,6 +93,28 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- End Portfolio Section -->
   </div>
 
+
+
+
+    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+      <h2 class="w3-text-light-grey">Clientes Puntillismo</h2>
+      <hr style="width:200px" class="w3-opacity">
+
+      <p id="demo"></p>
+
+      <script>
+      var puntillismo = ["caled", "abel", "moises"];
+      document.getElementById("demo").innerHTML = puntillismo;
+      </script>
+
+      </p>
+
+
+  </body>
+  </html>
+
+
+
   <!-- Contact Section -->
 
 
@@ -103,7 +128,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-linkedin w3-hover-text-indigo"></i>
   <!-- End footer -->
   </footer>
-
+  <!DOCTYPE html>
+  <html>
+  <body>
 <!-- END PAGE CONTENT -->
 </div>
 
