--- a/Tattoo Studio/New School.html
+++ b/Tattoo Studio/New School.html
@@ -420,6 +420,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </div>
   <!-- Contact Section -->
 
+      <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+        <h2 class="w3-text-light-grey">Clientes Puntillismo</h2>
+        <hr style="width:200px" class="w3-opacity">
+
+        <p id="demo"></p>
+
+        <script>
+        var puntillismo = ["caled", "abel", "moises"];
+        document.getElementById("demo").innerHTML = puntillismo;
+        </script>
+
+        </p>
+
+
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <i class="fa fa-facebook-official w3-hover-text-indigo"></i>
