--- a/Tattoo Studio/tribales.html
+++ b/Tattoo Studio/tribales.html
@@ -19,7 +19,7 @@ img {margin-bottom: -7px}
 
 <p><a href= ./index.html target=_top><button class="w3-button w3-black">Home</button></a></p>
 
-<!-- Sidebar 
+<!-- Sidebar
 <nav class="w3-sidebar w3-black w3-animate-top w3-xxlarge" style="display:none;padding-top:150px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-black w3-jumbo w3-display-topright" style="padding:6px 24px">
     <i class="fa fa-remove"></i>
@@ -68,23 +68,23 @@ img {margin-bottom: -7px}
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px"> 
+<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px">
   <i class="fa fa-facebook-official w3-hover-text-indigo"></i>
-  <i class="fa fa-instagram w3-hover-text-purple"></i>
+   <i class="fa fa-instagram w3-hover-text-purple"></i>
   <i class="fa fa-snapchat w3-hover-text-yellow"></i>
   <i class="fa fa-pinterest-p w3-hover-text-red"></i>
   <i class="fa fa-twitter w3-hover-text-light-blue"></i>
   <i class="fa fa-linkedin w3-hover-text-indigo"></i>
   <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
- 
+
 <script>
 // Toggle grid padding
 function myFunction() {
     var x = document.getElementById("myGrid");
     if (x.className === "w3-row") {
         x.className = "w3-row-padding";
-    } else { 
+    } else {
         x.className = x.className.replace("w3-row-padding", "w3-row");
     }
 }
@@ -100,31 +100,21 @@ function w3_close() {
 }
 </script>
 
-<script>
-	
-    var tiempo1;
-    var tiempo2;
-    var tiempo3;
-    var suma;
-    var promedio;
+    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+      <h2 class="w3-text-light-grey">Clientes Tribales</h2>
+      <hr style="width:200px" class="w3-opacity">
+
+      <p id="demo"></p>
+
+      <script>
+      var Tribales = ["caled", "abel", "moises"];
+      document.getElementById("demo").innerHTML = Tribales;
+      </script>
+
+      </p>
 
 
-  tiempo1=prompt('Ingrese la primer duración en minutos','');
-  tiempo1=parseInt(tiempo1);
-  tiempo2=prompt('Ingrese la segunda duración en minutos','');
-  tiempo2=parseInt(tiempo2);
-  tiempo3=prompt('Ingrese la tercer duracion en minutos','');
-  tiempo3=parseInt(tiempo3);
-
-  suma=tiempo1+tiempo2+tiempo3;
-  promedio=suma/3;
-
-  document.write('El promedio es: ');
-  document.write(promedio);
-  document.write('<br>');
 
 
-</script>
-    
 </body>
 </html>
