--- a/Tattoo Studio/index.html
+++ b/Tattoo Studio/index.html
@@ -46,9 +46,9 @@
                              <li><a href="index.html" class="menu-top-active" >HOME</a></li>
 
                              <li><a href="./tribales.html">TRIBALES</a></li>
-                              <li><a href="" >PUNTILLISMO</a></li>
+                              <li><a href="./puntillismo.html" >PUNTILLISMO</a></li>
                               <li><a href="">OLD SCHOOL</a></li>
-                             <li><a href="">NEW SCHOOL</a></li>
+                             <li><a href="./new_school.html">NEW SCHOOL</a></li>
                              <li><a href=""></a></li>
                          </ul>
                      </div>
