--- a/Tattoo Studio/tribales.html
+++ b/Tattoo Studio/tribales.html
@@ -15,6 +15,21 @@ img {margin-bottom: -7px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>jQuery UI Datepicker - Default functionality</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+  $( function() {
+    $( "#datepicker" ).datepicker();
+  } );
+  </script>
+</head>
+
 <body>
 
 <p><a href= ./index.html target=_top><button class="w3-button w3-black">Home</button></a></p>
@@ -64,10 +79,12 @@ img {margin-bottom: -7px}
   </div>
 </div>
 
+<p>Fecha para hacerse su tatuaje: <input type="text" id="datepicker"></p>
+
 <!-- End Page Content -->
 </div>
 
-<!-- Footer -->
+<!-- Footer 
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px">
   <i class="fa fa-facebook-official w3-hover-text-indigo"></i>
    <i class="fa fa-instagram w3-hover-text-purple"></i>
@@ -76,7 +93,7 @@ img {margin-bottom: -7px}
   <i class="fa fa-twitter w3-hover-text-light-blue"></i>
   <i class="fa fa-linkedin w3-hover-text-indigo"></i>
   <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
+</footer>-->
 
 <script>
 // Toggle grid padding
@@ -100,7 +117,7 @@ function w3_close() {
 }
 </script>
 
-    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
+    <!--<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
       <h2 class="w3-text-light-grey">Clientes Tribales</h2>
       <hr style="width:200px" class="w3-opacity">
 
@@ -113,8 +130,7 @@ function w3_close() {
 
       </p>
 
-
-
+	</div>-->
 
 </body>
 </html>
